--- a/pages/quest.html
+++ b/pages/quest.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div class="perfil">
-      <img src="../images/user.svg" alt="" />
+      <button><img src="../images/user.svg" alt="" /></button>
     </div>
 
     <div class="titulo">
@@ -27,30 +27,42 @@
     <div class="questionario">
       <div class="perguntas1">
         <p>Quais são suas maiores inseguranças?</p>
-        <div class="inseguranças"></div>
+        <div class="inseguranças">
+          <input type="text" placeholder="Responda aqui" />
+        </div>
 
         <p>O que mais afeta sua autoestima?</p>
-        <div class="autoestima"></div>
+        <div class="autoestima">
+          <input type="text" placeholder="Responda aqui" />
+        </div>
 
         <p>Você costuma se sentir confiante?</p>
-        <div class="confiança"></div>
+        <div class="confiança">
+          <input type="text" placeholder="Responda aqui" />
+        </div>
       </div>
 
       <div class="perguntas2">
         <p>Quais são seus maiores medos?</p>
-        <div class="medo"></div>
+        <div class="medo">
+          <input type="text" placeholder="Responda aqui" />
+        </div>
 
         <p>Como você avalia sua autoestima de 1 a 10?</p>
-        <div class="avaliação"></div>
+        <div class="avaliação">
+          <input type="text" placeholder="Responda aqui" />
+        </div>
 
         <p>O que você gostaria de mudar em si?</p>
-        <div class="melhoras"></div>
+        <div class="melhoras">
+          <input type="text" placeholder="Responda aqui" />
+        </div>
       </div>
     </div>
 
     <div class="entre">
       <div class="botao">
-        <p>Entre</p>
+        <button>Entre</button>
       </div>
     </div>
   </body>
