--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -21,7 +21,7 @@
 
       <div id="espaco">
         <div class="cadastro">
-          <h1>CADASTRE-SE</h1>
+          <button>CADASTRE-SE</button>
         </div>
       </div>
 
@@ -33,18 +33,22 @@
 
       <div id="redes">
         <div class="google">
-          <img src="../images/google.png" alt="" width="40px" height="40px" />
+          <button>
+            <img src="../images/google.png" alt="" width="40px" height="40px" />
+          </button>
         </div>
 
         <div class="linha"></div>
 
         <div class="facebook">
-          <img
-            src="../images/facebook-removebg-preview.png"
-            alt=""
-            width="40px"
-            height="40px"
-          />
+          <button>
+            <img
+              src="../images/facebook-removebg-preview.png"
+              alt=""
+              width="40px"
+              height="40px"
+            />
+          </button>
         </div>
       </div>
     </div>
