--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -21,7 +21,9 @@
 
       <div id="espaco">
         <div class="cadastro">
-          <button>CADASTRE-SE</button>
+          <a href="/login">
+            <button>CADASTRE-SE</button>
+          </a>
         </div>
       </div>
 
