--- a/pages/in.html
+++ b/pages/in.html
@@ -34,7 +34,9 @@
 
     <div class="botao">
       <div class="prox">
-        <button>Próximo</button>
+        <a href="/personalizar">
+          <button>Próximo</button>
+        </a>
       </div>
     </div>
   </body>
