--- a/pages/in.html
+++ b/pages/in.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../styles/in.css" />
-    <script src="../scripts/in.js"></script>
+
+    <link rel="stylesheet" href="/styles/in.css" />
+    <script src="/scripts/in.js" defer></script>
     <title>NEXA (introdução)</title>
   </head>
   <body>
@@ -23,17 +24,20 @@
       </div>
 
       <div class="senha">
-        <input type="text" placeholder="Senha" />
+        <input id="senha" type="password" placeholder="Senha" />
       </div>
 
       <div class="mostrar-senha">
         <p>Mostrar senha</p>
-        <button><img src="../images/quadradinho.svg" alt="" /></button>
+        <button onclick="senha()">
+          <img src="../images/quadradinho.svg" alt="" />
+        </button>
       </div>
     </div>
 
     <div class="botao">
       <div class="prox">
+        <a href="/personalizar"></a>
         <button>Próximo</button>
       </div>
     </div>
