--- a/pages/in.html
+++ b/pages/in.html
@@ -37,8 +37,9 @@
 
     <div class="botao">
       <div class="prox">
-        <a href="/personalizar"></a>
-        <button>Próximo</button>
+        <a href="/personalizar">
+          <button>Próximo</button>
+        </a>
       </div>
     </div>
   </body>
