--- a/pages/per.html
+++ b/pages/per.html
@@ -58,7 +58,9 @@
           <button>SELECIONE UMA FOTO</button>
         </div>
         <div class="prox">
-          <button>Próximo</button>
+          <a href="/questionario">
+            <button>Próximo</button>
+          </a>
         </div>
       </div>
     </div>
