--- a/pages/quest.html
+++ b/pages/quest.html
@@ -62,7 +62,9 @@
 
     <div class="entre">
       <div class="botao">
-        <button>Entre</button>
+        <a href="/tema">
+          <button>Entre</button>
+        </a>
       </div>
     </div>
   </body>
