--- a/pages/ctt.html
+++ b/pages/ctt.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles/ctt.css">
-    <script src="/scripts/ctt.js"></script>
+    <link rel="stylesheet" href="../styles/ctt.css">
+    <script src="../scripts/ctt.js"></script>
     <title>CONTATOS NEXA</title>
 </head>
 <body>
@@ -16,12 +16,12 @@
     <aside class="area">
       <div class="icones">
         <div class="perfil">
-          <img src="../images/circle-user-regular-full.svg" alt="" srcset="">
+         <button><img src="../images/circle-user-regular-full.svg" alt="" srcset=""></button>
         </div>
         <div class="icons">
           <div class="funcoes">
-            <img src="../images/gear.svg" alt="" srcset="">
-            <img src="../images/messagecontorno.svg" alt="" srcset="">
+            <button><img src="../images/gear.svg" alt="" srcset=""></button>
+            <button><img src="../images/messagecontorno.svg" alt="" srcset=""></button>
           </div>
         </div>
       </div>
@@ -34,13 +34,14 @@
         <div class="lista"><h1>Nossos Profissionais:</h1></div>
         
         <div class="chat-header">
-          <div class="nomes"><img src="../images/circle-user-regular-full.svg" alt="" srcset=""><p>Dra. Franciny</p></div>
-          <div class="nomes"><img src="../images/circle-user-regular-full.svg" alt="" srcset=""><p>Dra. Elisa Reinert</p></div>
-          <div class="nomes"><img src="../images/circle-user-regular-full.svg" alt="" srcset=""><p>Dra. Witória Carvalho</p></div>
-          <div class="nomes"><img src="../images/circle-user-regular-full.svg" alt="" srcset=""><p>Dra. Júlia Alves</p></div>
-          <div class="nomes"><img src="../images/circle-user-regular-full.svg" alt="" srcset=""><p>Dra. Fidelis Francini</p></div>
-          <div class="nomes"><img src="../images/circle-user-regular-full.svg" alt="" srcset=""><p>Dra. Laryssa</p></div>
-          <div class="nomes"><img src="../images/circle-user-regular-full.svg" alt="" srcset=""><p>Dra. Mariana Lopes</p></div>
+          <div class="nomes"><button><img src="../images/circle-user-regular-full.svg" alt="" srcset=""><p>Dra. Franciny</p></button></div>
+          <div class="nomes"><button><img src="../images/circle-user-regular-full.svg" alt="" srcset=""><p>Dra. Elisa Reinert</p></button></div>
+          <div class="nomes"><button><img src="../images/circle-user-regular-full.svg" alt="" srcset=""><p>Dra. Elisa Reinert</p></button></div>
+          <div class="nomes"><button><img src="../images/circle-user-regular-full.svg" alt="" srcset=""><p>Dra. Witória Carvalho</p></button></div>
+          <div class="nomes"><button><img src="../images/circle-user-regular-full.svg" alt="" srcset=""><p>Dra. Júlia Alves</p></button></div>
+          <div class="nomes"><button><img src="../images/circle-user-regular-full.svg" alt="" srcset=""><p>Dra. Francisca</p></button></div>
+          <div class="nomes"><button><img src="../images/circle-user-regular-full.svg" alt="" srcset=""><p>Dra. Laryssa</p></button></div>
+          <div class="nomes"><button><img src="../images/circle-user-regular-full.svg" alt="" srcset=""><p>Dra. Mariana Lopes</p></button></div>
           
         </div>
 
