--- a/pages/chat.html
+++ b/pages/chat.html
@@ -21,8 +21,14 @@
         </div>
         <div class="icons">
           <div class="funcoes">
+
+            <a href="/configuracoes">
             <button><img src="../images/gear.svg" alt="" srcset=""></button>
+          </a>
+
+            <a href="/contatos">
             <button><img src="../images/phone2.svg" alt="" srcset=""></button>
+          </a>
           </div>
         </div>
       </div>
