--- a/pages/ctt.html
+++ b/pages/ctt.html
@@ -35,7 +35,7 @@
         
         <div class="chat-header">
           <div class="nomes"><button><img src="../images/circle-user-regular-full.svg" alt="" srcset=""><p>Dra. Franciny</p></button></div>
-          <div class="nomes"><button><img src="../images/circle-user-regular-full.svg" alt="" srcset=""><p>Dra. Elisa Reinert</p></button></div>
+          <div class="nomes"><button><img src="../images/circle-user-regular-full.svg" alt="" srcset=""><p>Dra. Débora Mendes</p></button></div>
           <div class="nomes"><button><img src="../images/circle-user-regular-full.svg" alt="" srcset=""><p>Dra. Elisa Reinert</p></button></div>
           <div class="nomes"><button><img src="../images/circle-user-regular-full.svg" alt="" srcset=""><p>Dra. Witória Carvalho</p></button></div>
           <div class="nomes"><button><img src="../images/circle-user-regular-full.svg" alt="" srcset=""><p>Dra. Júlia Alves</p></button></div>
