--- a/pages/conf.html
+++ b/pages/conf.html
@@ -17,8 +17,15 @@
             </div>
             <div class="icons">
               <div class="funcoes">
+
+                <a href="/contatos">
               <button><img src="../images/phone2.svg" alt="" srcset=""></button>
+            </a>
+
+              <a href="/chat">
               <button><img src="../images/messagecontorno.svg" alt="" srcset=""></button>
+            </a>
+            
               </div>
             </div>
           </div>
