--- a/pages/ctt.html
+++ b/pages/ctt.html
@@ -20,8 +20,14 @@
         </div>
         <div class="icons">
           <div class="funcoes">
+            
+            <a href="/configuracoes">
             <button><img src="../images/gear.svg" alt="" srcset=""></button>
+          </a>
+
+            <a href="/chat">
             <button><img src="../images/messagecontorno.svg" alt="" srcset=""></button>
+          </a>
           </div>
         </div>
       </div>
