--- a/pages/conf.html
+++ b/pages/conf.html
@@ -17,15 +17,8 @@
             </div>
             <div class="icons">
               <div class="funcoes">
-
-                <a href="/contatos">
               <button><img src="../images/phone2.svg" alt="" srcset=""></button>
-            </a>
-
-              <a href="/chat">
               <button><img src="../images/messagecontorno.svg" alt="" srcset=""></button>
-            </a>
-            
               </div>
             </div>
           </div>
@@ -59,7 +52,7 @@
     <main class="segundo_container">
       
         <header class="busca">
-            <img src="../images/pesquisa.svg" alt="" srcset=""> <p>O que você procura?</p>
+          <div class="pesquisa"><img src="../images/pesquisa.svg" alt="" srcset=""> <input type="text" placeholder="O que você procura?"></div>
         </header>
   
 
