--- a/pages/ctt.html
+++ b/pages/ctt.html
@@ -34,7 +34,10 @@
         <div class="lista"><h1>Nossos Profissionais:</h1></div>
         
         <div class="chat-header">
+          <a href="/chat">
           <div class="nomes"><button><img src="../images/circle-user-regular-full.svg" alt="" srcset=""><p>Dra. Franciny</p></button></div>
+        </a>
+
           <div class="nomes"><button><img src="../images/circle-user-regular-full.svg" alt="" srcset=""><p>Dra. Elisa Reinert</p></button></div>
           <div class="nomes"><button><img src="../images/circle-user-regular-full.svg" alt="" srcset=""><p>Dra. Elisa Reinert</p></button></div>
           <div class="nomes"><button><img src="../images/circle-user-regular-full.svg" alt="" srcset=""><p>Dra. Witória Carvalho</p></button></div>
