--- a/pages/tema.html
+++ b/pages/tema.html
@@ -20,9 +20,17 @@
           
 
           <ul>
+            <a href="/chat">
             <button><img src="../images/message2.svg" alt=""> </button>
+          </a>
+
+            <a href="/contatos">
             <button><img src="../images/phone2.svg" alt=""></button>
+          </a>
+
+            <a href="/configuracoes">
             <button><img src="../images/gear.svg" alt=""></button>
+          </a>
           </ul>
 
           <div class="logo">
