--- a/pages/in.html
+++ b/pages/in.html
@@ -16,11 +16,11 @@
 
     <div class="opcoes">
       <div class="email">
-        <input type="text" placeholder="Email" />
+        <input id="email" type="text" placeholder="Email" />
       </div>
 
       <div class="nome-usuario">
-        <input type="text" placeholder="Nome de Usuário" />
+        <input id="nome" type="text" placeholder="Nome de Usuário" />
       </div>
 
       <div class="senha">
@@ -37,9 +37,7 @@
 
     <div class="botao">
       <div class="prox">
-        <a href="/personalizar">
-          <button>Próximo</button>
-        </a>
+        <button onclick="proximo()">Próximo</button>
       </div>
     </div>
   </body>
