--- a/pages/per.html
+++ b/pages/per.html
@@ -27,7 +27,7 @@
 
       <div class="data">
         <input
-          id="data_nascimento"
+          id="data_nascimeto"
           type="text"
           placeholder="Data de Nascimento"
         />
