--- a/pages/quest.html
+++ b/pages/quest.html
@@ -28,34 +28,34 @@
       <div class="perguntas1">
         <p>Quais são suas maiores inseguranças?</p>
         <div class="inseguranças">
-          <input type="text" placeholder="Responda aqui" />
+          <input id="resposta" type="text" placeholder="Responda aqui" />
         </div>
 
         <p>O que mais afeta sua autoestima?</p>
         <div class="autoestima">
-          <input type="text" placeholder="Responda aqui" />
+          <input id="resposta" type="text" placeholder="Responda aqui" />
         </div>
 
         <p>Você costuma se sentir confiante?</p>
         <div class="confiança">
-          <input type="text" placeholder="Responda aqui" />
+          <input id="resposta" type="text" placeholder="Responda aqui" />
         </div>
       </div>
 
       <div class="perguntas2">
         <p>Quais são seus maiores medos?</p>
         <div class="medo">
-          <input type="text" placeholder="Responda aqui" />
+          <input id="resposta" type="text" placeholder="Responda aqui" />
         </div>
 
         <p>Como você avalia sua autoestima de 1 a 10?</p>
         <div class="avaliação">
-          <input type="text" placeholder="Responda aqui" />
+          <input id="resposta" type="text" placeholder="Responda aqui" />
         </div>
 
         <p>O que você gostaria de mudar em si?</p>
         <div class="melhoras">
-          <input type="text" placeholder="Responda aqui" />
+          <input id="resposta" type="text" placeholder="Responda aqui" />
         </div>
       </div>
     </div>
@@ -63,7 +63,7 @@
     <div class="entre">
       <div class="botao">
         <a href="/tema">
-          <button>Entre</button>
+          <button onclick="Entre()">Entre</button>
         </a>
       </div>
     </div>
