--- a/pages/quest.html
+++ b/pages/quest.html
@@ -28,43 +28,41 @@
       <div class="perguntas1">
         <p>Quais são suas maiores inseguranças?</p>
         <div class="inseguranças">
-          <input id="resposta" type="text" placeholder="Responda aqui" />
+          <input id="insegurancas" type="text" placeholder="Responda aqui" />
         </div>
 
         <p>O que mais afeta sua autoestima?</p>
         <div class="autoestima">
-          <input id="resposta" type="text" placeholder="Responda aqui" />
+          <input id="autoestima" type="text" placeholder="Responda aqui" />
         </div>
 
         <p>Você costuma se sentir confiante?</p>
         <div class="confiança">
-          <input id="resposta" type="text" placeholder="Responda aqui" />
+          <input id="confianca" type="text" placeholder="Responda aqui" />
         </div>
       </div>
 
       <div class="perguntas2">
         <p>Quais são seus maiores medos?</p>
         <div class="medo">
-          <input id="resposta" type="text" placeholder="Responda aqui" />
+          <input id="medos" type="text" placeholder="Responda aqui" />
         </div>
 
         <p>Como você avalia sua autoestima de 1 a 10?</p>
         <div class="avaliação">
-          <input id="resposta" type="text" placeholder="Responda aqui" />
+          <input id="avaliacao" type="text" placeholder="Responda aqui" />
         </div>
 
         <p>O que você gostaria de mudar em si?</p>
         <div class="melhoras">
-          <input id="resposta" type="text" placeholder="Responda aqui" />
+          <input id="mudancas" type="text" placeholder="Responda aqui" />
         </div>
       </div>
     </div>
 
     <div class="entre">
       <div class="botao">
-        <a href="/tema">
           <button onclick="Entre()">Entre</button>
-        </a>
       </div>
     </div>
   </body>
