--- a/pages/quest.html
+++ b/pages/quest.html
@@ -62,7 +62,9 @@
 
     <div class="entre">
       <div class="botao">
+        <a href="/tema">
           <button onclick="Entre()">Entre</button>
+        </a>
       </div>
     </div>
   </body>
