--- a/pages/ctt.html
+++ b/pages/ctt.html
@@ -20,8 +20,8 @@
         </div>
         <div class="icons">
           <div class="funcoes">
-            <button><img src="../images/gear.svg" alt="" srcset=""></button>
-            <button><img src="../images/messagecontorno.svg" alt="" srcset=""></button>
+            <a href="/configuracoes"><button><img src="../images/gear.svg" alt="" srcset=""></button></a>
+           <a href="/chat" > <button><img src="../images/messagecontorno.svg" alt="" srcset=""></button></a>
           </div>
         </div>
       </div>
