--- a/pages/per.html
+++ b/pages/per.html
@@ -28,7 +28,7 @@
       <div class="data">
         <input
           id="data_nascimeto"
-          type="text"
+          type="date"
           placeholder="Data de Nascimento"
         />
       </div>
