--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -7,52 +7,46 @@
     <link rel="stylesheet" href="../styles/cadastro.css" />
     <script src="../scripts/cadastro.js"></script>
     <title>NEXA (tela inicial)</title>
-  </head>
   <body>
-    <div class="fundo">
-      <div class="logo">
+    <main class="fundo">
+      
+      <header class="logo">
         <img
           src="../images/1000043872.png"
-          alt=""
-          height="300px"
-          width="450px"
+          alt="Logo da NEXA"
+          height="300"
+          width="450"
         />
-      </div>
+      </header>
 
-      <div id="espaco">
+      <section id="espaco">
         <div class="cadastro">
           <a href="/login">
             <button>CADASTRE-SE</button>
           </a>
         </div>
-      </div>
+      </section>
 
-      <div id="abaixo">
-        <div class="conectar">
-          <p>ou conecte-se com</p>
-        </div>
-      </div>
+      <section id="abaixo">
+        <p>ou conecte-se com</p>
+      </section>
 
-      <div id="redes">
-        <div class="google">
-          <button>
-            <img src="../images/google.png" alt="" width="40px" height="40px" />
-          </button>
-        </div>
+      <section id="redes">
+        <button class="google">
+          <img src="../images/google.png" alt="Google" width="40" height="40" />
+        </button>
 
         <div class="linha"></div>
 
-        <div class="facebook">
-          <button>
-            <img
-              src="../images/facebook-removebg-preview.png"
-              alt=""
-              width="40px"
-              height="40px"
-            />
-          </button>
-        </div>
-      </div>
-    </div>
+        <button class="facebook">
+          <img
+            src="../images/facebook-removebg-preview.png"
+            alt="Facebook"
+            width="40"
+            height="40"
+          />
+        </button>
+      </section>
+    </main>
   </body>
 </html>
