--- a/pages/conf.html
+++ b/pages/conf.html
@@ -94,4 +94,4 @@
                 <article class="cardDestaque">
                   <img src="../images/ribbon.svg" alt="">
                   Você é forte e corajosa
-                  <d
+                </div>
