--- a/pages/tema.html
+++ b/pages/tema.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -110,4 +110,124 @@
     
     
 </body>
+</html> -->
+
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../styles/tema.css" />
+    <script src="../scripts/tema.js"></script>
+    <title>NEXA</title>
+  </head>
+
+  <body>
+    <div class="fundo">
+      <!-- MENU LATERAL -->
+      <aside class="area">
+        <!-- Perfil -->
+        <figure class="perfil">
+          <button>
+            <img src="../images/profile.svg" alt="Perfil" />
+          </button>
+        </figure>
+
+        <!-- Navegação -->
+        <nav>
+          <ul>
+            <li>
+              <a href="/chat">
+                <button>
+                  <img src="../images/message2.svg" alt="Chat" />
+                </button>
+              </a>
+            </li>
+
+            <li>
+              <a href="/contatos">
+                <button>
+                  <img src="../images/phone2.svg" alt="Contatos" />
+                </button>
+              </a>
+            </li>
+
+            <li>
+              <a href="/configuracoes">
+                <button>
+                  <img src="../images/gear.svg" alt="Configurações" />
+                </button>
+              </a>
+            </li>
+          </ul>
+        </nav>
+
+        <!-- Logo -->
+        <figure class="logo">
+          <img src="../images/1000043872.png" alt="Logo" />
+        </figure>
+      </aside>
+
+      <!-- CONTEÚDO PRINCIPAL -->
+      <main class="segundo_container">
+        <!-- Barra de busca -->
+        <header class="busca">
+          <div class="pesquisa">
+            <img src="../images/pesquisa.svg" alt="" />
+            <input type="text" placeholder="O que você procura?" />
+          </div>
+        </header>
+
+        <!-- GRID DE CARDS -->
+        <section class="quadrado_roxo">
+          <!-- COLUNA 1 -->
+          <section class="coluna1">
+            <article class="card1">
+              <img src="../images/calendar.svg" alt="" />
+              <div class="frase1">Como está se sentindo hoje</div>
+            </article>
+
+            <article class="cardProfissional">
+              <img src="../images/profissional.png" alt="" />
+              <p>Profissional</p>
+            </article>
+          </section>
+
+          <!-- COLUNA 2 -->
+          <section class="coluna2">
+            <article class="card2">
+              <img src="../images/book.svg" alt="" />
+              <p>Frases todos os dias!</p>
+            </article>
+
+            <article class="card">honre quem você é</article>
+
+            <article class="cardmaior">Seja você. Por você. Para você.</article>
+          </section>
+
+          <!-- COLUNA 3 -->
+          <section class="coluna3">
+            <article class="card_destaque">
+              Cuide muito bem desse lugar chamado você!
+            </article>
+          </section>
+
+          <!-- COLUNA 4 -->
+          <section class="coluna4">
+            <article class="colunas">
+              <img src="../images/espelho.svg" alt="" />
+              Você é linda!
+            </article>
+
+            <article class="cardmedia">
+              <img src="../images/ribbon.svg" alt="" />
+              Você é forte e corajosa
+              <div class="cap">Josué 1:9</div>
+            </article>
+          </section>
+        </section>
+      </main>
+    </div>
+  </body>
 </html>
