--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -45,6 +45,53 @@
             width="40"
             height="40"
           />
+        </button>
+      </section>
+    </main>
+  </body>
+</html> -->
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../styles/cadastro.css" />
+    <script src="../scripts/cadastro.js" defer></script>
+    <title>NEXA (tela inicial)</title>
+  </head>
+
+  <body>
+    <main class="fundo">
+      <header class="logo">
+        <img
+          src="../images/1000043872.png"
+          alt="Logo da NEXA"
+          class="logo-img"
+        />
+      </header>
+
+      <section id="espaco">
+        <div class="cadastro">
+          <a href="/login">
+            <button>CADASTRE-SE</button>
+          </a>
+        </div>
+      </section>
+
+      <section id="abaixo">
+        <p>ou conecte-se com</p>
+      </section>
+
+      <section id="redes">
+        <button class="google">
+          <img src="../images/google.png" alt="Google" />
+        </button>
+
+        <div class="linha"></div>
+
+        <button class="facebook">
+          <img src="../images/facebook-removebg-preview.png" alt="Facebook" />
         </button>
       </section>
     </main>
