--- a/pages/conf.html
+++ b/pages/conf.html
@@ -36,7 +36,7 @@
           <article class="conf">
             <div class="nomes">
               <button><img src="../images/circle-user-regular-full.svg" alt=""></button>
-              <p>Nome do Usuário</p>
+              <p>Juju</p>
             </div>
           </article>
 
