--- a/pages/conf.html
+++ b/pages/conf.html
@@ -35,7 +35,7 @@
 
           <article class="conf">
             <div class="nomes">
-              <button><img src="../images/circle-user-regular-full.svg" alt=""></button>
+              <a href="/personalizar"><button><img src="../images/circle-user-regular-full.svg" alt=""></button></a>
               <p>Juju</p>
             </div>
           </article>
